--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -7,7 +7,7 @@
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Expires" content="0" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<title>后台管理-闪小白</title>
+		<title>tpAdmin</title>
 		<!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
 		<!--[if lt IE 9]>
 		<script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>-->
@@ -65,7 +65,7 @@
 				<!-- 菜 单 顶 部 -->
 				<div class="layui-logo">
 					<!-- 图 标 -->
-					<img class="logo" />
+<!--					<img class="logo" />-->
 					<!-- 标 题 -->
 					<span class="title"></span>
 				</div>
